# viewer3D

./: .gitignore  CMakeLists.txt  README.md
cmake/: Findglfw3.cmake
dependencies/glad/: glad.h
executable/shaders/: shader.frag  shader.vert
shaders/: shader.frag
src/: Camera.cpp  Camera.h  Debugger.h  EBO.cpp  EBO.h  Image.cpp  Image.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  glad.c  main.cpp  shaderClass.cpp  shaderClass.h
